# dermalogica-us

./: .eslintrc.json  .prettierrc.json  styles.css
.cursor/: figma.mcp.json
.cursor/rules/: tailwind-v4.mdc
collection-product-recommendation-quiz/: README.md  app.py  pyproject.toml  replit_prompt_for_shopify.txt  replit_zip_error_log.txt
collection-product-recommendation-quiz/assets/: product-quiz.css  product-quiz.js
collection-product-recommendation-quiz/config/: settings_schema.json
collection-product-recommendation-quiz/sections/: product-quiz-button.liquid
collection-product-recommendation-quiz/snippets/: product-quiz.liquid
collection-product-recommendation-quiz/templates/: index.html  product-quiz-button.html  product-quiz.html
recharge/: checkmarks.css  checkmarks.html  view-hide-details-test.html
routine-results/: README-PRODUCT-RECOMMENDATIONS.md  README.md  Routine Finder Quiz System [master] - Routine Matrix.csv  TIERED-UPSELLING-SYSTEM.md  app.js  globals.css  index.html  product-data.js  styles.css  test.html
routine-results/css/: globals.css  styles.css
routine-results/data/: Routine Finder Quiz System [master] - Quiz Questions & Logic.csv
routine-results/docs/: ARCHITECTURE.md  SHOPIFY-INTEGRATION.md  STICKY-TABS-AND-AMPM-UPDATE.md  VERIFICATION-CHECKLIST.md
routine-results/js/: app.js
terracycle-search/: index.html  recycling_data.json  scripts.js  styles.css
test/: test.html
webflow-optimize/collections-sort-filter/: page-source-code.html  preconditions.js  scripts.js  styles.css  svg-icons.html
(+22 files in other folders)
